# chronos-sentinel

./: .env.example  .gitignore  DEPLOYMENT.md  PROJECT_PLAN.md  inspect_db.js  package.json  pnpm-lock.yaml  turbo.json
apps/agent/src/: index.html  main.js  styles.css
apps/agent/src-tauri/: .taurignore  Cargo.toml  build.rs  chronos.db  chronos.db-shm  chronos.db-wal  tauri.conf.json  trace.txt
apps/agent/src-tauri/src/: auth.rs  db.rs  grpc.rs  idle.rs  main.rs  sniffer.rs  telemetry.rs
apps/aggregator/: Dockerfile  config.go  env.go  go.mod  go.sum  main.go  models.go  package.json  processor.go  processor_test.go  rabbitmq.go  store.go
apps/ingestor/: .dockerignore  Dockerfile  auth.go  db.go  env.go  go.mod  go.sum  main.go  package.json  pulse.go  rabbitmq.go  redis.go  worker.go
apps/ingestor/cmd/flush/: main.go
apps/ingestor/proto/: activity.pb.go  activity_grpc.pb.go
apps/web/: .env.example  .eslintrc.js  package-lock.json  package.json  sniff.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: manifest.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/signup/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/components/: device-card.tsx  layout-provider.tsx  pulse-badge.tsx  session-list.tsx  sidebar.tsx  stats-cards.tsx  timeline.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  input-otp.tsx  select.tsx  table.tsx
apps/web/src/lib/: auth.ts  mongodb.ts  redis.ts
(+11 files in other folders)
